--- a/work2.html
+++ b/work2.html
@@ -1,17 +1,29 @@
-<div class="user-details">
-  <h1> Featured Projects </h1>
+ <div class="user-details">
+  <h1> My Expertise </h1>
+  <p> {{site.user_description}} </p>
 </div>
-<div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/Destiny-2-1080P-Wallpaper.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Destiny II Gaming Analytics </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Destiny II, a multiplayer first-person shooter, with data provided by the game’s developer Bungie Studio</p>
-    <a class="project-link" href="project_1.html">Check it out</a>
-  </div>
+  <div class="user">
+    <div class="tech">
+      <h2>Programming</h2>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-python-plain colored"></i>
+      <i class="devicon-bootstrap-plain-wordmark colored"></i>
+      <i class="devicon-sass-original colored"></i>
+      <p>Python, R, Java, C++ </p>
+    </div>
+    <div class="tech">
+      <h2>Machine Learning</h2>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-react-original-wordmark colored"></i>
+      <i class="devicon-nodejs-plain-wordmark"></i>
+      <p>Supervised Learning, Unsupervised Learning</p>
+    </div>
+    <div class="tech">
+      <h2>Tools</h2>
+      <i class="devicon-git-plain"></i>
+      <i class="devicon-gulp-plain colored"></i>
+      <i class="devicon-atom-original-wordmark"></i>
+      <p>AWS, Tableau, Hadoop, Spark, Hive</p>
+    </div>
 </div>
-
